--- a/app/index.html
+++ b/app/index.html
@@ -55,9 +55,12 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+
+    <script src="resources.js"></script>
+    <script src="resources/category.js"></script>
+    <!-- endbuild -->
 </body>
 </html>
